--- a/sdl_space_shooter/sdl_space_shooter.vcxproj
+++ b/sdl_space_shooter/sdl_space_shooter.vcxproj
@@ -91,7 +91,7 @@
       <AdditionalIncludeDirectories>D:\FutureGames\Projects\sdl-space-shooter\sdl_space_shooter\src;$(SolutionDir)\$(ProjectName)\lib\SDL2\include;$(SolutionDir)\$(ProjectName)\lib\SDL2_image\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeaderOutputFile>$(IntDir)\$(TargetName).pch</PrecompiledHeaderOutputFile>
     </ClCompile>
     <Link>
@@ -112,7 +112,7 @@
       <AdditionalIncludeDirectories>D:\FutureGames\Projects\sdl-space-shooter\sdl_space_shooter\src;$(SolutionDir)\$(ProjectName)\lib\SDL2\include;$(SolutionDir)\$(ProjectName)\lib\SDL2_image\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeaderOutputFile>$(IntDir)\$(TargetName).pch</PrecompiledHeaderOutputFile>
     </ClCompile>
     <Link>
@@ -133,7 +133,7 @@
       <AdditionalIncludeDirectories>D:\FutureGames\Projects\sdl-space-shooter\sdl_space_shooter\src;$(SolutionDir)\$(ProjectName)\lib\SDL2\include;$(SolutionDir)\$(ProjectName)\lib\SDL2_image\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeaderOutputFile>$(IntDir)\$(TargetName).pch</PrecompiledHeaderOutputFile>
     </ClCompile>
     <Link>
@@ -154,7 +154,7 @@
       <AdditionalIncludeDirectories>D:\FutureGames\Projects\sdl-space-shooter\sdl_space_shooter\src;$(SolutionDir)\$(ProjectName)\lib\SDL2\include;$(SolutionDir)\$(ProjectName)\lib\SDL2_image\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeaderOutputFile>$(IntDir)\$(TargetName).pch</PrecompiledHeaderOutputFile>
     </ClCompile>
     <Link>
@@ -176,10 +176,12 @@
       <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(IntDir)$(TargetName).pch</PrecompiledHeaderOutputFile>
     </ClCompile>
     <ClCompile Include="src\application\events.cpp" />
+    <ClCompile Include="src\components\input.cpp" />
     <ClCompile Include="src\components\position.cpp" />
+    <ClCompile Include="src\components\texture.cpp" />
     <ClCompile Include="src\components\velocity.cpp" />
-    <ClCompile Include="src\image.cpp" />
-    <ClCompile Include="src\input.cpp" />
+    <ClCompile Include="src\application\texture_manager.cpp" />
+    <ClCompile Include="src\application\keyboard.cpp" />
     <ClCompile Include="src\main.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
@@ -192,15 +194,20 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\systems\draw_system.cpp" />
+    <ClCompile Include="src\systems\input_system.cpp" />
     <ClCompile Include="src\systems\physics_system.cpp" />
     <ClCompile Include="src\window_data.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\application\application.h" />
     <ClInclude Include="src\application\application_props.h" />
+    <ClInclude Include="src\application\keyboard.h" />
     <ClInclude Include="src\application\timer.h" />
     <ClInclude Include="src\components\components.h" />
+    <ClInclude Include="src\components\input.h" />
     <ClInclude Include="src\components\position.h" />
+    <ClInclude Include="src\components\texture.h" />
     <ClInclude Include="src\components\velocity.h" />
     <ClInclude Include="src\ecs\base_component_repository.h" />
     <ClInclude Include="src\ecs\component_repository.h" />
@@ -210,9 +217,10 @@
     <ClInclude Include="src\application\events.h" />
     <ClInclude Include="src\ecs\system.h" />
     <ClInclude Include="src\ecs\world.h" />
+    <ClInclude Include="src\systems\draw_system.h" />
+    <ClInclude Include="src\systems\input_system.h" />
     <ClInclude Include="src\systems\physics_system.h" />
-    <ClInclude Include="src\image.h" />
-    <ClInclude Include="src\input.h" />
+    <ClInclude Include="src\application\texture_manager.h" />
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\window_data.h" />
   </ItemGroup>
