--- a/sdl_space_shooter/sdl_space_shooter.vcxproj
+++ b/sdl_space_shooter/sdl_space_shooter.vcxproj
@@ -169,6 +169,7 @@
   <ItemGroup>
     <ClCompile Include="src\application\application.cpp" />
     <ClCompile Include="src\application\application_props.cpp" />
+    <ClCompile Include="src\application\interval.cpp" />
     <ClCompile Include="src\application\timer.cpp">
       <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)$(TargetName).pch</PrecompiledHeaderOutputFile>
       <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)$(TargetName).pch</PrecompiledHeaderOutputFile>
@@ -181,12 +182,14 @@
     <ClCompile Include="src\ecs\components\health.cpp" />
     <ClCompile Include="src\ecs\components\input.cpp" />
     <ClCompile Include="src\ecs\components\position.cpp" />
+    <ClCompile Include="src\ecs\components\rotation.cpp" />
     <ClCompile Include="src\ecs\components\texture.cpp" />
     <ClCompile Include="src\ecs\components\velocity.cpp" />
     <ClCompile Include="src\application\texture_manager.cpp" />
     <ClCompile Include="src\application\keyboard.cpp" />
     <ClCompile Include="src\ecs\systems\collision.cpp" />
     <ClCompile Include="src\ecs\systems\damage_collision.cpp" />
+    <ClCompile Include="src\ecs\systems\enemy_spawner.cpp" />
     <ClCompile Include="src\main.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
@@ -207,6 +210,7 @@
   <ItemGroup>
     <ClInclude Include="src\application\application.h" />
     <ClInclude Include="src\application\application_props.h" />
+    <ClInclude Include="src\application\interval.h" />
     <ClInclude Include="src\application\keyboard.h" />
     <ClInclude Include="src\application\timer.h" />
     <ClInclude Include="src\collision\aabb.h" />
@@ -216,17 +220,21 @@
     <ClInclude Include="src\ecs\components\health.h" />
     <ClInclude Include="src\ecs\components\input.h" />
     <ClInclude Include="src\ecs\components\position.h" />
+    <ClInclude Include="src\ecs\components\rotation.h" />
     <ClInclude Include="src\ecs\components\texture.h" />
     <ClInclude Include="src\ecs\components\velocity.h" />
-    <ClInclude Include="src\ecs\components\base_component_array.h" />
-    <ClInclude Include="src\ecs\components\component_array.h" />
+    <ClInclude Include="src\ecs\base_component_array.h" />
+    <ClInclude Include="src\ecs\component_array.h" />
+    <ClInclude Include="src\ecs\entities\enemy.h" />
     <ClInclude Include="src\ecs\entities\entity_repository.h" />
-    <ClInclude Include="src\ecs\component.h" />
+    <ClInclude Include="src\ecs\components\component.h" />
+    <ClInclude Include="src\ecs\entities\player.h" />
     <ClInclude Include="src\ecs\entity.h" />
     <ClInclude Include="src\application\events.h" />
     <ClInclude Include="src\ecs\system.h" />
     <ClInclude Include="src\ecs\systems\collision.h" />
     <ClInclude Include="src\ecs\systems\damage_collision.h" />
+    <ClInclude Include="src\ecs\systems\enemy_spawner.h" />
     <ClInclude Include="src\ecs\world.h" />
     <ClInclude Include="src\application\math.h" />
     <ClInclude Include="src\ecs\systems\draw_system.h" />
@@ -237,11 +245,12 @@
     <ClInclude Include="src\window_data.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="resources\background.png" />
     <Image Include="resources\icon.png" />
+    <Image Include="resources\meteor0.png" />
     <Image Include="resources\meteor1.png" />
     <Image Include="resources\meteor2.png" />
     <Image Include="resources\meteor3.png" />
-    <Image Include="resources\meteor4.png" />
     <Image Include="resources\player.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
